# MTRN3500-BCNW

./: README.md
cmake/: README.md
cmake/Helpful cmakelists/: CMakeLists.txt
cmake/project_root/modules/module_A/: CMakeLists.txt  mainA.cpp
cmake/project_root/modules/module_B/: CMakeLists.txt
examples/cmake/: README.md
examples/cmake/project_root/: CMakeLists.txt
examples/cmake/project_root/common_src/: common_source_file1.cpp  common_source_file2.cpp
examples/kbhit/: key_hit  keyboard_hit.cpp
examples/shared memory/: README.md  reader  reader.cpp  writer  writer.cpp
kbhit/: mconio.h
process startup/: key_hit  process_startup.cpp  ps
project_root/: CMakeLists.txt
project_root/common_include/: SMObject.hpp  SM_struct.hpp
project_root/common_src/: SMObject.cpp  text.cpp
project_root/modules/DisplayModule/: CMakeLists.txt  DisplayMain.cpp
project_root/modules/DisplayModule/src_display/: MyVehicle.cpp
project_root/modules/GPSModule/: CMakeLists.txt  CRCGeneration.hpp  GPSMain.cpp
project_root/modules/LaserModule/: CMakeLists.txt  LaserMain.cpp
project_root/modules/PMModule/: CMakeLists.txt  PMMain.cpp
project_root/modules/VehicleModule/: CMakeLists.txt  VehicleMain.cpp
project_root/modules/XboxModule/: CMakeLists.txt  XboxMain.cpp
project_root/modules/module_A/: CMakeLists.txt
shared memory/: README.md  SMObject.cpp  SMObject.hpp  reader  reader.cpp  writer  writer.cpp
tcp/: tcp.cpp
utils/kbhit/: keyboard_hit.cpp
